--- a/index.html
+++ b/index.html
@@ -3262,8 +3262,9 @@ KC	GULUCHYADI  KC 2.5KG	430
 KC	GULUCHYADI  KC 1KG	172
 KC	GULUCHYADI  KC 250GM	45
 KC	GULUCHYADI  KC 500GM	88
-KC	INDUKANTHAM  KC 100GM	18
+KC	INDUKANTHAM  KC 2.5KG	450
 KC	INDUKANTHAM  KC 500GM	90
+KC	INDUKANTHAM  KC 100GM	18
 KC	INDUKANTHAM  KC 50GM	10
 KC	KAIDARYADI  KC 1KG	228
 KC	KAIDARYADI  KC 250GM	59
