--- a/index.html
+++ b/index.html
@@ -5324,13 +5324,71 @@
           showConfirmButton: false,
         });
       }
-      function deleteSelectedIndent() {
+      // =========================================================
+      // ക്ലൗഡിൽ നിന്നോ ഫോണിൽ നിന്നോ ഇൻഡന്റ് ഡിലീറ്റ് ചെയ്യാനുള്ള ഫംഗ്ഷൻ
+      // =========================================================
+      async function deleteSelectedIndent() {
         const key = document.getElementById("savedIndentsList").value;
-        if (!key) return;
-        if (confirm("ഈ ഇൻഡന്‍റ് സ്ഥിരമായി ഡിലീറ്റ് ചെയ്യണോ?")) {
-          localStorage.removeItem(key);
+
+        if (!key) {
+          return Swal.fire(
+            "ശ്രദ്ധിക്കുക",
+            "ഡിലീറ്റ് ചെയ്യാൻ ലിസ്റ്റിൽ നിന്ന് ഒരു ഇൻഡന്റ് തിരഞ്ഞെടുക്കുക!",
+            "warning",
+          );
+        }
+
+        // സ്മാർട്ട് ഡിലീറ്റ് കൺഫർമേഷൻ (SweetAlert)
+        const result = await Swal.fire({
+          title: "ഉറപ്പാണോ?",
+          text: "ഈ ഇൻഡന്റ് സ്ഥിരമായി ഡിലീറ്റ് ചെയ്യാൻ പോവുകയാണ്. ഇത് പിന്നീട് തിരിച്ചെടുക്കാൻ കഴിയില്ല!",
+          icon: "warning",
+          showCancelButton: true,
+          confirmButtonColor: "#d33",
+          cancelButtonColor: "#3085d6",
+          confirmButtonText: "അതെ, ഡിലീറ്റ് ചെയ്യുക! 🗑️",
+          cancelButtonText: "വേണ്ട",
+        });
+
+        if (result.isConfirmed) {
+          // 1. ലോഗിൻ ചെയ്തിട്ടുണ്ടെങ്കിൽ ആദ്യം ക്ലൗഡിൽ നിന്ന് ഡിലീറ്റ് ചെയ്യുന്നു
+          if (typeof currentUser !== "undefined" && currentUser) {
+            try {
+              await db
+                .collection("users")
+                .doc(currentUser.uid)
+                .collection("indents")
+                .doc(key)
+                .delete();
+
+              // സുരക്ഷയ്ക്ക് വേണ്ടി ലോക്കലിലും ആ ഫയൽ ഉണ്ടെങ്കിൽ അതും ഡിലീറ്റ് ചെയ്യുന്നു
+              localStorage.removeItem(key);
+
+              Swal.fire(
+                "Deleted! ☁️",
+                "ക്ലൗഡിൽ നിന്നും ഫയൽ വിജയകരമായി ഡിലീറ്റ് ചെയ്തു.",
+                "success",
+              );
+            } catch (error) {
+              Swal.fire(
+                "Error",
+                "ക്ലൗഡിൽ നിന്ന് ഡിലീറ്റ് ചെയ്യാൻ കഴിഞ്ഞില്ല: " + error.message,
+                "error",
+              );
+              return; // എറർ വന്നാൽ ബാക്കി കോഡ് വർക്ക് ആവാതിരിക്കാൻ
+            }
+          } else {
+            // 2. ലോഗിൻ ചെയ്തിട്ടില്ലെങ്കിൽ ഫോണിൽ (Local Storage) നിന്ന് മാത്രം ഡിലീറ്റ് ചെയ്യുന്നു
+            localStorage.removeItem(key);
+            Swal.fire(
+              "Deleted! 💻",
+              "ബ്രൗസറിൽ നിന്നും ഫയൽ വിജയകരമായി ഡിലീറ്റ് ചെയ്തു.",
+              "success",
+            );
+          }
+
+          // ഡിലീറ്റ് ചെയ്ത ശേഷം ഡ്രോപ്പ്ഡൗൺ ലിസ്റ്റ് തനിയെ അപ്ഡേറ്റ് ചെയ്യുന്നു
           updateIndentDropdown();
-          alert("ഡിലീറ്റ് ചെയ്തു.");
         }
       }
       function importJsonData(input) {
